2006-12-14  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am: Remove pc.in files from EXTRA_DIST, as autotools
	  distribute them anyway. Include Doxyfile in the distribution.

	* Doxyfile: Remove missing footer directive.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Ensure debian/rules is executable.

	* debian/control.in: Fix the name of the debug package.

	* debian/libskstream-0.3-dev.install: Fix the header order.

	* libskstream-0.3-4-dbg.install, libskstream-0.3-4.install:
	  Rename install files to the correct interface version.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>

	* debian: Experimental package files for creating .debs.

2006-10-14  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/sksocket.h: Move the IP
	  protocol enumerations to the generic socket header, as
	  they can be used in either streams or servers. Remove
	  service port numbers, as we should not be hardcoding
	  them. We should be looking them up from the OS.

	* ping/ping.cpp: Add our own variable for the ping service
	  as the headers no longer provide it.

2006-10-14  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.3.6, interface version 4.0.0.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* sasproto.h, skpoll.cpp, skpoll.h, skserver.cpp, skserver.h,
	  skserver_unix.h, sksocket.cpp, sksocket.h, skstream.cpp,
	  skstream.h, skstream_unix.h: Update the copyright statements
	  with current maintainer.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* acinclude.m4: Fix quoting in autoconf macros.

2006-10-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add check for gai_strerror, as it is missing on some
	  platforms, particularly windows. Specify the Windows API version
	  as 0x501 so we get the XP features.

	* skstream/skstream.cpp, skstream/skserver.cpp: Provide a version
	  of gai_strerror() on platforms that use getaddrinfo, but don't
	  have it.

2006-10-10  Al Riddoch  <alriddoch@zepler.org>
