@@ -32,6 +32,8 @@
 /////////////////////////////////////////////////////////////////////////////
 // class unix_socket_stream
 /////////////////////////////////////////////////////////////////////////////
+
+/// An iostream class that handles unix sockets
 class unix_socket_stream : public basic_socket_stream {
 private:
   explicit unix_socket_stream(const unix_socket_stream&);
